CFMODULE can only import CF template files CF11

--- a/strategy/api/resources/templates/overview-summary.html
+++ b/strategy/api/resources/templates/overview-summary.html
@@ -25,7 +25,7 @@ function windowTitle()
 
 <BODY BGCOLOR="white" onload="windowTitle();">
 
-<cfmodule template="inc/nav.html"
+<cfmodule template="inc/nav.cfm"
 			page="Overview"
 			projectTitle= "#arguments.projectTitle#"
 			file="overview-summary"
@@ -57,7 +57,7 @@ function windowTitle()
 <P>
 &nbsp;<HR>
 
-<cfmodule template="inc/nav.html"
+<cfmodule template="inc/nav.cfm"
 			page="Overview"
 			projectTitle= "#arguments.projectTitle#"
 			file="overview-summary"
