--- a/strategy/api/resources/templates/package-summary.html
+++ b/strategy/api/resources/templates/package-summary.html
@@ -26,7 +26,7 @@ function windowTitle()
 <BODY BGCOLOR="white" onload="windowTitle();">
 
 
-<cfmodule template="inc/nav.html"
+<cfmodule template="inc/nav.cfm"
 			page="Package"
 			projectTitle= "#arguments.projectTitle#"
 			package = "#arguments.package#"
@@ -85,7 +85,7 @@ Package #arguments.package#
 </cfif>
 
 
-<cfmodule template="inc/nav.html"
+<cfmodule template="inc/nav.cfm"
 			page="Package"
 			projectTitle= "#arguments.projectTitle#"
 			package = "#arguments.package#"
