--- a/strategy/api/resources/templates/class.html
+++ b/strategy/api/resources/templates/class.html
@@ -29,7 +29,7 @@ function windowTitle()
 <BODY BGCOLOR="white" onload="windowTitle();">
 
 
-<cfmodule template="inc/nav.html"
+<cfmodule template="inc/nav.cfm"
 			page="Class"
 			projectTitle= "#arguments.projectTitle#"
 			package = "#arguments.package#"
@@ -400,7 +400,7 @@ Class
 </cfloop>
 </cfif>
 
-<cfmodule template="inc/nav.html"
+<cfmodule template="inc/nav.cfm"
 			page="Class"
 			projectTitle= "#arguments.projectTitle#"
 			package = "#arguments.package#"
